# Hospital-Inpatient-Management-System

./: .gitignore  README.md  main.py  pyproject.toml  pyproject.toml.user.351d049  requirements.txt  start.sh  test.db  test_connection.py
.qtcreator/Python_3_12_9venv/: pyvenv.cfg
.qtcreator/Python_3_12_9venv/Scripts/: activate  activate.bat
backend/: auth.py  crud.py  database.py  main.py  models.py  schemas.py  seed_data.py
backend/admin/: create_dump.py
backend/admin/routers/: system.py
backend/app/: config.py  database.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routers/: admission_teams.py  admissions.py  auth.py  departments.py  feedback.py  hospitalizations.py  med_entries.py  medication_orders.py  patients.py  payments.py  positions.py  rooms.py  staff.py  staff_roles.py  (+2 more)
backend/app/crud/: admission_team_crud.py  base.py  department_crud.py  feedback_crud.py  hospitalization_crud.py  med_entry_crud.py  medication_order_crud.py  patient_admission_crud.py  patient_crud.py  payment_crud.py  position_crud.py  room_crud.py  staff_crud.py  staff_role_crud.py  ward_crud.py
backend/app/models/: base_models.py
backend/app/schemas/: admission_schema.py  admission_team_schema.py  department_schema.py  feedback_schema.py  hospitalization_schema.py  med_entry_schemas.py  medication_order_schema.py  patient_schema.py  payment_schema.py  position_schema.py  room_schema.py  staff_role_schema.py  staff_schema.py  ward_schema.py
backend/app/utils/: create_dump.py
backend/routers/: admission_teams.py  admissions.py  auth.py  departments.py  feedback.py  hospitalizations.py  med_entries.py  medication_orders.py  patients.py  payments.py  positions.py  rooms.py  staff.py  staff_roles.py  wards.py
backend/tests/test_endp/: conftest.py  test_admission_teams.py  test_patients.py  test_staff.py
backend_old/: database.py  main.py  models.py
backend_old/routers/: departments.py  patients.py
docs/: pairprog.md  tehdolg.md  ИССЛЕДОВАНИЕ ПОЛЬЗОВАТЕЛЬСКОГО ОПЫТА (UX).md  Исследование архитектурного решения.md
frontend/: api_client.py  feedback_dialog.py  feedback_inbox.py  form.ui  main.py  main_gui.py  mainwindow.py  patient.ui  patient_dialog.py  ui_form.py  ui_patient.py
frontend/core/: api_client.py  state.py  theme_manager.py
frontend/utils/: config_generator.py  exporter.py
frontend/views/: dialogs.py  mainwindow.py
frontend/workers/: api_worker.py
test-server/backend/: conftest.py  logs.txt  test_main.py  test_seed_data.py
test-server/backend/admin/: test_create_dump.py
test-server/backend/routers/: test_admission_teams.py  test_admissions.py  test_auth.py  test_departments.py  test_feedback.py  test_hospitalizations.py  test_med_entries.py  test_medication_orders.py  test_patients.py  test_payments.py  test_positions.py  test_rooms.py  test_staff.py  test_staff_roles.py  test_wards.py
Новая папка/: запуск.txt
(+1 files in other folders)
